add scp metrics
Signed-off-by: zhuhuijun <zhuhuijunzhj@gmail.com>

--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,12 @@
 {
-  "ips": [
-    "154.196.163.128",
-    "154.196.197.128",
-    "154.196.198.128",
-    "154.196.131.254",
-    "154.196.144.254"
-  ],
+  "ips": {
+    "127.0.0.1":{
+      "describe": "香港优化回国",
+      "port": "22"
+    }
+  },
+  "id_rsa": "/Users/zhuhuijun/.ssh/id_rsa",
+  "scp_file": "./Makefile",
   "routines": 5,
   "retry_times": 3
 }
